--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>This is the title of the webpage!</title>
   </head>
-  <script src="script.ts"></script>
+  <script src="./script.js"></script>
   <body>
     
     
